Fix media previews and replacement
